Fix parent menu item vertical alignment against icons

--- a/web/static/style/superfish/superfish.css
+++ b/web/static/style/superfish/superfish.css
@@ -37,6 +37,9 @@
 .sf-menu a img
 {
 	padding-right: 6px;
+	margin-bottom: -16px;
+	padding-bottom: 8px;
+	padding-top: 2px;
 }
 .sf-menu li:hover ul, .sf-menu li.sfHover ul
 {
